To Display Hello From Bridgelabz With A User Input Name

--- a/hello/src/App.css
+++ b/hello/src/App.css
@@ -12,3 +12,9 @@ input {
   margin-top: 5%;
   margin-left: 43%;
 }
+.error-output {
+  margin-left: 10px;
+  font-size: 12px;
+  font-style: italic;
+  color: red;
+}
