--- a/hello/src/App.css
+++ b/hello/src/App.css
@@ -1,20 +1,37 @@
 h1 {
   text-align: center;
-  font-size: xx-large;
+  font-size: 60px;
+  color: #004a95;
+  padding: 20px 0;
+  margin: 0;
+  text-shadow: 3px 3px 1px black;
+}
+.app-main{
+  background-color: #004a95;
 }
 img {
   display: block;
   margin: 0 auto;
   width: 25%;
-}
-input {
-  text-align: center;
-  margin-top: 5%;
-  margin-left: 43%;
+  background-color: white;
 }
 .error-output {
   margin-left: 10px;
   font-size: 12px;
   font-style: italic;
   color: red;
+}
+.main {
+  height: 99%;
+  background-color: orange;
+  margin: 0 15%;
+  padding: 0 15px;
+  border: 2px solid black;
+}
+.text-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
 }
